代码解析器以及文件保保存器，通过策略模式进行优化

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+# 忽略敏感配置
+src/main/resources/application-dev.yml
+
 ### STS ###
 .apt_generated
 .classpath
