--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ai_agent_system # 配置你的数据库引擎
+    url: jdbc:mysql://www.ndsyoj.icu:13306/ai_agent_system # 配置你的数据库引擎
     username: root
-    password: 1
+    password: ZfBBFDzxjbxdNxbs
 langchain4j:
   open-ai:
     chat-model:
       base-url: https://api.deepseek.com
-      api-key: sk-f5e167a6d77c4078b2433db1859c352f
+      api-key: sk-0c1a33d9d097455c84eb1f974088586c
       model-name: deepseek-chat
       log-requests: true
       log-responses: true
@@ -17,7 +17,7 @@ langchain4j:
       response-format: json_object
     streaming-chat-model:
       base-url: https://api.deepseek.com
-      api-key: sk-f5e167a6d77c4078b2433db1859c352f
+      api-key: sk-0c1a33d9d097455c84eb1f974088586c
       model-name: deepseek-chat
       log-requests: true
       log-responses: true
