--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,18 +12,18 @@ spring:
     redis: # 你的redis配置
       host: 127.0.0.1
       port: 6379
-#      connect-timeout: 5000
+      connect-timeout: 5000
       ttl: 3600
-#      lettuce:
-#        pool:
-#          # 最大连接数
-#          max-active: 200
-#          # 连接池最大阻塞等待时间（负值代表没有限制）
-#          max-wait: -1
-#          # 连接池中的最大空闲连接
-#          max-idle: 10
-#          # 连接池中的最小空闲连接
-#          min-idle: 0
+      lettuce:
+        pool:
+          # 最大连接数
+          max-active: 200
+          # 连接池最大阻塞等待时间（负值代表没有限制）
+          max-wait: -1
+          # 连接池中的最大空闲连接
+          max-idle: 10
+          # 连接池中的最小空闲连接
+          min-idle: 0
       database: 3
 server:
   port: 8123
