--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,24 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.39</version>
         </dependency>
+        <!--网页截图依赖-->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.33.0</version>
+        </dependency>
+        <!--自动下载管理浏览器的依赖-->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>6.1.0</version>
+        </dependency>
+        <!--腾讯云储存cos-->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.227</version>
+        </dependency>
     </dependencies>
 
     <build>
