--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -81,8 +81,8 @@ langchain4j:
       log-requests: true
       log-responses: true
       max-tokens: 8192
-      strict-json-schema: true
-      response-format: json_object
+#      strict-json-schema: true
+#      response-format: json_object
     streaming-chat-model:
       base-url: https://api.deepseek.com
       api-key: <你的api密钥>
