完善账户封禁功能： 1-对话功能账户校验 2-文件上传功能账户校验 3-登录账户校验 4-获取用户列表封禁状态以及时间

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,10 +32,11 @@ spring:
     password: <你的授权码>
     default-encoding: UTF-8
     properties:
-      smtp:
-        auth: true
-      starttls:
-        enable: true
+      mail:
+        smtp:
+          auth: true
+          starttls.enable: true
+          starttls.required: true
 server:
   port: 8123
   servlet:
