通过langGraph4j的高级特性 -条件边 通过并发节点实现并发收集图片

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
+        <!--邮箱的依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
