--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -102,6 +102,21 @@ langchain4j:
       log-requests: true
       log-responses: true
       max-tokens: 8192
+    # 推理 AI 模型配置（用于复杂的推理任务）
+    senior-streaming-chat-model:
+      base-url: https://api.deepseek.com
+      api-key: <Your API Key>
+      model-name: deepseek-reasoner
+      max-tokens: 32768
+      temperature: 0.1
+      log-requests: true
+      log-responses: true
+    # 智能路由 AI 模型配置（用于简单的分类任务）
+    routing-chat-model:
+      base-url: https://api.deepseek.com
+      api-key: <Your API Key>
+      model-name: deepseek-chat
+      log-requests: true
 cos:
   client:
     host: <你的端口>
